# cmd/api/docs/swagger.json
@@ -1,7 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server  server. You can visit the GitHub repository at https://github.com/prasanth-pn/clean-code-architecture-ecommerce",
+        "title": "Go + Gin ecommerce API",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
+        },
+        "version": "1.0"
     },
     "paths": {
         "/admin/add/category": {
@@ -28,48 +39,13 @@
                         "schema": {
                             "$ref": "#/definitions/domain.Category"
                         }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
                     },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/add/products": {
-            "post": {
-                "security": [
                     {
-                        "BearerAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "List user for admin",
-                "operationId": "AdminAddProducts",
-                "parameters": [
-                    {
-                        "description": "AdminAddProduct",
-                        "name": "AdminAddProducts",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/domain.Product"
-                        }
+                        "type": "file",
+                        "description": "select image",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -448,9 +424,6 @@
                 },
                 "description": {
                     "type": "string"
-                },
-                "image": {
-                    "type": "string"
                 }
             }
         },
@@ -470,54 +443,6 @@
                     "type": "string",
                     "maxLength": 12,
                     "minLength": 6
-                }
-            }
-        },
-        "domain.Product": {
-            "type": "object",
-            "properties": {
-                "available": {
-                    "type": "boolean"
-                },
-                "brand_id": {
-                    "type": "integer"
-                },
-                "cart_id": {
-                    "type": "integer"
-                },
-                "category_id": {
-                    "type": "integer"
-                },
-                "color": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "image_path": {
-                    "type": "string"
-                },
-                "model_id": {
-                    "type": "integer"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "product_Id": {
-                    "type": "integer"
-                },
-                "product_name": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                },
-                "trending": {
-                    "type": "boolean"
-                },
-                "wishListID": {
-                    "description": "Brand        Brand\nCategory     Category",
-                    "type": "integer"
                 }
             }
         },
@@ -542,7 +467,6 @@
                     "type": "string"
                 },
                 "created_At": {
-                    "description": "Orders_ID uint",
                     "type": "string"
                 },
                 "email": {
@@ -575,6 +499,9 @@
                     "maxLength": 12,
                     "minLength": 3
                 },
+                "profile_Pic": {
+                    "type": "string"
+                },
                 "updated_At": {
                     "type": "string"
                 },
@@ -582,7 +509,6 @@
                     "type": "integer"
                 },
                 "verification": {
-                    "description": "Status       bool",
                     "type": "boolean"
                 }
             }
@@ -599,6 +525,13 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
